# libgaussian

./: .gitignore  CMakeLists.txt  setup
cmake/: ConfigSafeGuards.cmake
pysamples/example1/: bz.xyz  cc-pvdz-minao.gbs  cc-pvtz-minao.gbs  geom.xyz  no2_2.xyz  op_test.py  test.py
python/: CMakeLists.txt  README  core.cc  export_collections.cc  export_core.cc  export_df.cc  export_jk.cc  export_mints.cc  export_ob.cc  export_sad.cc  export_solver.cc  export_tensor.cc  libpygaussian.cc  python.cc
samples/: CMakeLists.txt  example1.cc  example2.cc
src/: CMakeLists.txt  README
src/core/: am.cc  am.h  basisset.cc  basisset.h  molecule.cc  molecule.h  python.cc
src/df/: aodf.cc  df.cc  df.h  modf.cc
src/jk/: dfjk.cc  directjk.cc  jk.cc  jk.h
src/mints/: boys.cc  boys.h  constants.cc  constants.h  dipole2c.cc  fjt.cc  fjt.h  general4c.cc  int2c.cc  int2c.h  int4c.cc  int4c.h  int4c2.cc  int4c2.h  interaction.cc  interaction.h  kinetic2c.cc  osrecur.cc  osrecur.h  overlap2c.cc  potential2c.cc  potential4c.cc  quadrupole2c.cc  schwarz.cc  schwarz.h
src/ob/: ob.cc  ob.h
src/sad/: sad.cc  sad.h
src/solver/: diis.cc  diis.h
src/tb/: tb.cc  tb.h
